# Data-Structures

.github/: cmake.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  help.yml  question.yml
.github/workflows/: cmake.yml
backend/: CMakeLists.txt
backend/include/: list.hpp  manager.hpp
backend/src/: list.cpp  main.cpp
backend/test/: CMakeLists.txt  main.cpp  setup.sh
backend/test/src/: list.test.cpp
